--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -190,6 +190,15 @@
         <item name="colorControlActivated">@color/yellow_star</item>
     </style>
 
+    <style name="day_not_open">
+        <item name="android:textSize">@dimen/text_size_medium</item>
+    </style>
+
+    <style name="day_open">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">@dimen/text_size_large</item>
+    </style>
+
 
 
 
