--- a/app/src/main/res/layout-land/card_restaurant.xml
+++ b/app/src/main/res/layout-land/card_restaurant.xml
@@ -91,6 +91,39 @@
             app:layout_constraintVertical_bias=".1" />
 
         <TextView
+            android:id="@+id/textview_card_open"
+            android:visibility="visible"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@id/textview_card_favourite_title"
+            android:gravity="left"
+            android:text="@string/open"
+            android:textColor="@color/green"
+            android:textSize="@dimen/text_size_small"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias=".5"
+            app:layout_constraintStart_toEndOf="@+id/icon_card_favourite"
+            app:layout_constraintTop_toBottomOf="@+id/textview_card_favourite_category"
+            app:layout_constraintVertical_bias=".05" />
+        <TextView
+            android:id="@+id/textview_card_close"
+            android:visibility="invisible"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@id/textview_card_favourite_title"
+            android:gravity="left"
+            android:text="@string/close"
+            android:textColor="@color/red_heart"
+            android:textSize="@dimen/text_size_small"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias=".5"
+            app:layout_constraintStart_toEndOf="@+id/icon_card_favourite"
+            app:layout_constraintTop_toBottomOf="@+id/textview_card_favourite_category"
+            app:layout_constraintVertical_bias=".05" />
+
+        <TextView
             android:id="@+id/textview_card_favourite_adress"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
